--- a/My/Base.lproj/Main.storyboard
+++ b/My/Base.lproj/Main.storyboard
@@ -230,7 +230,7 @@
                                                                                 <real key="value" value="100"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="CurrentValue">
-                                                                                <real key="value" value="20"/>
+                                                                                <real key="value" value="15"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                         </userDefinedRuntimeAttributes>
                                                                     </view>
@@ -243,7 +243,7 @@
                                                                             <userDefinedRuntimeAttribute type="color" keyPath="BGColor">
                                                                                 <color key="value" red="0.0078431372550000003" green="0.53333333329999999" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             </userDefinedRuntimeAttribute>
-                                                                            <userDefinedRuntimeAttribute type="string" keyPath="SkillName" value="English"/>
+                                                                            <userDefinedRuntimeAttribute type="string" keyPath="SkillName" value="Programming"/>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="SkillNameMarginX">
                                                                                 <real key="value" value="0.0"/>
                                                                             </userDefinedRuntimeAttribute>
@@ -257,7 +257,7 @@
                                                                                 <real key="value" value="100"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="CurrentValue">
-                                                                                <real key="value" value="75"/>
+                                                                                <real key="value" value="69"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                         </userDefinedRuntimeAttributes>
                                                                     </view>
@@ -332,7 +332,7 @@
                                                                             <userDefinedRuntimeAttribute type="color" keyPath="BGColor">
                                                                                 <color key="value" red="0.0078431372550000003" green="0.53333333329999999" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             </userDefinedRuntimeAttribute>
-                                                                            <userDefinedRuntimeAttribute type="string" keyPath="SkillName" value="Programming"/>
+                                                                            <userDefinedRuntimeAttribute type="string" keyPath="SkillName" value="English"/>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="SkillNameMarginX">
                                                                                 <real key="value" value="0.0"/>
                                                                             </userDefinedRuntimeAttribute>
@@ -346,7 +346,7 @@
                                                                                 <real key="value" value="100"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="CurrentValue">
-                                                                                <real key="value" value="69"/>
+                                                                                <real key="value" value="75"/>
                                                                             </userDefinedRuntimeAttribute>
                                                                         </userDefinedRuntimeAttributes>
                                                                     </view>
@@ -662,7 +662,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2408" y="336.43178410794604"/>
+            <point key="canvasLocation" x="-2436" y="153"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -766,7 +766,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bHu-7d-BRK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1702" y="336"/>
+            <point key="canvasLocation" x="-1745" y="-154"/>
         </scene>
         <!--MoreVC-->
         <scene sceneID="Lsh-eW-6Vp">
@@ -797,7 +797,7 @@
                                         <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6ZD-rn-fZ4" id="yG8-ee-Bnd">
-                                            <frame key="frameInset" width="414" height="99.666666666666671"/>
+                                            <frame key="frameInset" width="414" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="twitter" translatesAutoresizingMaskIntoConstraints="NO" id="FMV-yq-dFu">
@@ -865,7 +865,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zCX-0N-t4X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-926" y="-34"/>
+            <point key="canvasLocation" x="-929" y="-154"/>
         </scene>
         <!--Show WebsiteVC-->
         <scene sceneID="VA8-FQ-4HP">
@@ -914,7 +914,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xyB-AZ-cez" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-124" y="-179.46026986506749"/>
+            <point key="canvasLocation" x="-59" y="-154"/>
         </scene>
     </scenes>
     <resources>
